--- a/src/fxml/DirectionHelp.fxml
+++ b/src/fxml/DirectionHelp.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="mainPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DirectionHelpController">
     <children>
-        <Pane fx:id="aPane" opacity="0.56" prefHeight="460.0" prefWidth="860.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <Pane fx:id="aPane" prefHeight="460.0" prefWidth="860.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
         <GridPane layoutX="23.0" layoutY="58.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="30.0" />
@@ -25,14 +25,14 @@
                 <RowConstraints maxHeight="1.7976931348623157E308" minHeight="30.0" vgrow="ALWAYS" />
             </rowConstraints>
             <children>
-                <AnchorPane prefHeight="400.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <AnchorPane styleClass="tutorial-background" prefHeight="400.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <children>
                         <JFXTextArea fx:id="helpTextArea" editable="false" layoutX="207.0" layoutY="118.0" prefHeight="191.0" prefWidth="387.0" styleClass="help-text" text="Help">
                             <font>
                                 <Font size="24.0" />
                             </font>
                         </JFXTextArea>
-                        <JFXButton fx:id="returnButton" layoutX="-36.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="100.0" text="Return" />
+                        <JFXButton fx:id="returnButton" layoutX="10.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="100.0" text="Return" />
                         <JFXButton fx:id="previousButton" layoutX="14.0" layoutY="336.0" onAction="#previousPressed" prefHeight="50.0" prefWidth="150.0" text="Previous" />
                         <JFXProgressBar fx:id="helpProgress" layoutX="236.0" layoutY="359.0" prefHeight="5.0" prefWidth="329.0" progress="0.0" />
                         <JFXButton fx:id="nextButton" layoutX="636.0" layoutY="336.0" onAction="#nextPressed" prefHeight="50.0" prefWidth="150.0" text="Next" />
