--- a/src/fxml/SceneStyle.css
+++ b/src/fxml/SceneStyle.css
@@ -63,6 +63,10 @@
     -fx-background-color: whitesmoke;
 }
 
+.tutorial-background {
+    -fx-background-color: whitesmoke;
+    -fx-opacity: 90%;
+}
 .jfx-tab-pane .headers-region, .tab-pane {
     -fx-background-color: rgb(135,157,163);
 }
