--- a/src/fxml/AnimatedHelp.fxml
+++ b/src/fxml/AnimatedHelp.fxml
@@ -4,6 +4,8 @@
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,7 +15,7 @@
 
 <AnchorPane fx:id="mainPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AnimatedHelpController">
    <children>
-      <Pane fx:id="helpPane" styleClass="full-tutorial-background" opacity="0.56" prefHeight="460.0" prefWidth="860.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Pane fx:id="helpPane" opacity="0.56" prefHeight="460.0" prefWidth="860.0" styleClass="full-tutorial-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <GridPane layoutX="23.0" layoutY="58.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="30.0" />
@@ -33,7 +35,15 @@
                         <Font size="24.0" />
                      </font>
                   </JFXTextArea>
-                  <JFXButton fx:id="returnButton" layoutX="10.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="100.0" style="-fx-opacity: 100%;" text="Return" />
+                  <JFXButton fx:id="returnButton" contentDisplay="RIGHT" layoutX="10.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="120.0" style="-fx-opacity: 100%;" text="Return">
+                      <graphic>
+                          <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                  <Image url="@../images/Icons/exitWhite.png" />
+                              </image>
+                          </ImageView>
+                      </graphic>
+                  </JFXButton>
                   <JFXButton fx:id="previousButton" layoutX="14.0" layoutY="336.0" onAction="#previousPressed" prefHeight="50.0" prefWidth="150.0" style="-fx-opacity: 100%;" text="Previous" />
                   <Label fx:id="stepLabel" layoutX="368.0" layoutY="315.0" styleClass="text-on-white" text="stepLabel">
                      <font>
