--- a/src/fxml/DirectionHelp.fxml
+++ b/src/fxml/DirectionHelp.fxml
@@ -11,6 +11,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane fx:id="mainPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DirectionHelpController">
     <children>
         <Pane fx:id="aPane" styleClass="full-tutorial-background" prefHeight="460.0" prefWidth="860.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -33,8 +35,15 @@
                                 <Font size="24.0" />
                             </font>
                         </JFXTextArea>
-                        <JFXButton fx:id="returnButton" layoutX="10.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="100.0" text="Return" />
-                        <JFXButton fx:id="previousButton" layoutX="14.0" layoutY="336.0" onAction="#previousPressed" prefHeight="50.0" prefWidth="150.0" text="Previous" />
+                        <JFXButton fx:id="returnButton" contentDisplay="RIGHT" layoutX="10.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="120.0" style="-fx-opacity: 100%;" text="Return">
+                            <graphic>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../images/Icons/exitWhite.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </JFXButton>                        <JFXButton fx:id="previousButton" layoutX="14.0" layoutY="336.0" onAction="#previousPressed" prefHeight="50.0" prefWidth="150.0" text="Previous" />
                         <Label fx:id="stepLabel" layoutX="368.0" layoutY="315.0" styleClass="text-on-white" text="stepLabel">
                      <font>
                         <Font size="18.0" />
