final push biches

--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<Pane fx:id="mainPane" minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <AnchorPane fx:id="mainAnchorPane" layoutX="-5.0" minHeight="400.0" minWidth="800.0" styleClass="pane">
          <children>
@@ -26,7 +26,7 @@
                   </Label>
                </graphic>
                <tooltip>
-                  <Tooltip text="Displaying curent date and time">
+                  <Tooltip text="Displaying current date and time">
                      <font>
                         <Font size="13.0" />
                      </font>
