--- a/src/fxml/Feedback.fxml
+++ b/src/fxml/Feedback.fxml
@@ -163,7 +163,9 @@
                                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
                                       <RowConstraints maxHeight="29.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                                      <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="27.0" vgrow="ALWAYS" />
+                                      <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+                                      <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+
                                   </rowConstraints>
                                   <children>
                                       <Label alignment="CENTER" text="  Credits  " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
@@ -287,6 +289,11 @@
                                           </font>
                                     </Label>
                                       <Label text="  Team G  " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="16" GridPane.valignment="TOP">
+                                          <font>
+                                              <Font size="17.0" />
+                                          </font>
+                                      </Label>
+                                      <Label text="  © Brigham and Women's Hospital 2017  " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="17" GridPane.valignment="BOTTOM">
                                           <font>
                                               <Font size="17.0" />
                                           </font>
